...
import { ActiveHOAProvider } from "./contexts/ActiveHOAContext";
import { DataProvider } from "./contexts/DataContext";
import AuthLayout from "./components/layouts/AuthLayout";
import MainLayout from "./components/layouts/MainLayout";
import ReviewerLayout from "./components/layouts/ReviewerLayout";
import CondoManagerLayout from "./components/layouts/CondoManagerLayout";
import Login from "./pages/Login";
import Register from "./pages/Register";
import ResetPassword from "./pages/ResetPassword";
import CompleteProfile from "./pages/CompleteProfile";
import Dashboard from "./pages/Dashboard";
import CoachDashboard from "./pages/CoachDashboard";
import CoachSchedule from "./pages/CoachSchedule";
...
